# Crosslog

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  README.md  crosslog-requirement-specification.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  promts.md  tsconfig.base.json  vitest.config.ts  wdio.conf.ts  цель создать приложение для анализа неск.md
.codex/: config.toml
.github/workflows/: ci.yml
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: diagnostic_log.rs  directory_access.rs  drag_drop.rs  file_access.rs  file_identity.rs  file_watcher.rs  mod.rs  session_store.rs  ui_test.rs
apps/desktop/src-tauri/src/events/: mod.rs
apps/web/: index.html  package.json  vite.config.ts
assets/icons/: README.md
docs/: Bugs_1.txt  Bugs_2.txt  crosslog-ui-design.md  development.md
docs/mockups/: crosslog-current-implementation-mockup.html  crosslog-draft-layout-mockups.html  crosslog-macos-redesign-mockups.html  (+2 more)
scripts/: run-desktop-ui-tests.mjs
(+175 files in other folders)
